--- a/style.css
+++ b/style.css
@@ -118,6 +118,53 @@ nav {
   width: 100%;
 }
 
+/* online games section style */
+.online-games {
+  max-width: 1100px;
+  margin: 100px auto;
+}
+.online-games-content {
+  text-align: center;
+}
+.online-title {
+  color: #0b0223;
+  font-size: 3rem;
+  font-weight: 700;
+  margin-bottom: 30px;
+}
+.online-title span {
+  color: #f950e0;
+}
+.online-info {
+  color: #534c64;
+  font-size: 1.1rem;
+  font-weight: 400;
+  margin-bottom: 50px;
+}
+.games-card {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 30px;
+}
+.games-card img {
+  width: 100%;
+  opacity: 1;
+}
+.games-card-info {
+  color: #534c64;
+  font-size: 1rem;
+  font-weight: 500;
+}
+/* .games-video-card img:hover{
+    border-radius: 16px;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.60) 0%, rgba(0, 0, 0, 0.60) 100%);
+    width: 100%;
+    opacity: 2;
+} */
+
+
+
+
 /* responsive styles */
 /* responsive website for mobile devices */
 @media screen and (max-width: 576px) {
@@ -140,20 +187,27 @@ nav {
   .banner {
     flex-direction: column-reverse;
   }
-  
+  .banner-title {
+    font-size: 2rem;
+  }
+  .banner-content span {
+    font-size: 5rem;
+  }
+  .games-card {
+    grid-template-columns: 1fr;
+  }
 }
 
-
 /* responsive website for medium devices */
-@media screen and (min-width:576px) and (max-width:992px){
-    nav,
+@media screen and (min-width: 576px) and (max-width: 992px) {
+  nav,
   .nav-item ul {
     flex-direction: column;
   }
   .nav-item ul li {
     margin: 10px 0;
   }
-  .nav-item{
+  .nav-item {
     width: 100%;
     text-align: center;
   }
@@ -163,13 +217,16 @@ nav {
   .banner-container {
     background-image: none;
   }
-  .banner-content{
+  .banner-content {
     text-align: center;
   }
-  .banner-title{
+  .banner-title {
     font-size: 2rem;
   }
   .banner-content span {
     font-size: 5rem;
+  }
+  .games-card {
+    grid-template-columns: repeat(2,1fr);
   }
 }
